Proofread Caravel feature

--- a/features.html
+++ b/features.html
@@ -10,9 +10,8 @@ title: 'Features'
     <img src="images/caravel.png" class="card-img-top" alt="Caravel in action">
     <div class="card-body">
       <h5 class="card-title">Caravel</h5>
-      <p class="card-text">The Caravel Package Manager is a package manager specifically built for Tridentu Linux. It features easy downloading and installation of packages, Lua scripting
-          (for hooks and installation scripts) and a simple manifest. Caravel will also feature a lookup service (for finding packages and dependencies), dotfile hosting (yes, they can be packages too)
-          and more.</p>
+      <p class="card-text">The Caravel Package Manager is  specifically built for Tridentu Linux. It features easy downloading and installation of packages (dotfiles included), Lua scripting
+          (for hooks and installation scripts) and a simple manifest. </p>
       <p class="card-text"><small class="text-body-secondary">Package Manager</small></p>
     </div>
   </div>
