--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ title:  'Welcome'
     <div class="col-4">
     <div class="card">
       <h6 class="card-header text-uppercase">Semi-minimal</h6>
-      <div class="frame__body">
+      <div class="card-body">
         Anything that's optional (meaning not needed for Tridentu to be Tridentu) is packaged using Caravel - Tridentu's own package manager/format.
       </div>
     </div>
