--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ title:  'Welcome'
 <div class="row mt-3">
   <div class="col-4">
     <div class="card">
-       <h6 class="card-header text-uppercase">Simple and effective</h6>
+       <h6 class="card-header text-uppercase bg-primary text-white">Simple and effective</h6>
       <div class="card-body">
         Tridentu provides a simple desktop/terminal setup for those who want something that works and that feels famiiar.
       </div>
@@ -49,7 +49,7 @@ title:  'Welcome'
   </div>
     <div class="col-4">
     <div class="card">
-      <h6 class="card-header text-uppercase">Semi-minimal</h6>
+      <h6 class="card-header text-uppercase bg-primary text-white">Semi-minimal</h6>
       <div class="card-body">
         Anything that's optional (meaning not needed for Tridentu to be Tridentu) is packaged using Caravel - Tridentu's own package manager/format.
       </div>
@@ -57,7 +57,7 @@ title:  'Welcome'
     </div>
    <div class="col-4">
     <div class="card">
-       <h6 class="text-uppercase card-header">Beautiful</h6>
+       <h6 class="text-uppercase card-header bg-primary text-white">Beautiful</h6>
       <div class="card-body">
         Tridentu comes with beautiful, Nord-themed visuals - visuals that usually feel natural for the distro.
       </div>
