Fix Documentation Feature element

--- a/features.html
+++ b/features.html
@@ -43,23 +43,19 @@ title: 'Features'
     <img src="images/flatpak.png" class="card-img-top" alt="Flatpak support in Discover">
     <div class="card-body">
       <h5 class="card-title">Flatpak</h5>
-      <p class="card-text">Tridentu-2K has Flatpak support out of the box. This also means that you have better control over what resides on your system - something that the CMR (Caravel Main Repository) could barely give you.</p>
+      <p class="card-text">Tridentu-2K has Flatpak support out of the box. This also means that you have better control over what apps reside on your system - something that the CMR (Caravel Main Repository) could barely give you.</p>
       <p class="card-text"><small class="text-body-secondary">Package Manager</small></p>
     </div>
   </div>
   </div>
   <div class="col-4">
     <div class="card">
-      <div class="card__container">
-        <div class="card__image" style="background-image: url('images/documents.png');"> </div>
-        <div class="card__title-container">
-          <p class="title text-black">Documented</p>
-          <p class="subtitle text-black">Built-in feature</p>
-        </div>
+      <img src="images/documents.png" class="card-img-top" alt="Flatpak support in Discover">
+      <div class="card-body">
+          <p class="card-title">Documented</p>
+          <p class="card-text">Tridentu 2K takes advantage of KDE's builtin Docbook functionality to give you the documentation that you need and deserve.</p>
+          <p class="card-text"><small class="text-body-secondary">Built-in feature</small></p>
       </div>
-      <div class="content">
-        <p>Tridentu-RK takes advantage of KDE's builtin Docbook functionality to give you the documentation that you need and deserve.</p>
-    </div>
   </div>
   </div>
    <div class="col-4">
@@ -72,7 +68,7 @@ title: 'Features'
           </div>
         </div>
         <div class="content">
-          <p>Tridentu-RK has Wine support out of the box. This  means that you can run Windows apps from you system. </p>
+          <p>Tridentu 2K has Wine support out of the box. This  means that you can run Windows apps from you system. </p>
       </div>
     </div>
   </div>
