--- a/_changelogs/index.html
+++ b/_changelogs/index.html
@@ -4,17 +4,24 @@ home: true
 layout: default
 ---
 
+<h3>Releases</h3>
 
-{% for release_note in site.changelogs %}
-  {% if release_note.home != true %}
-  <h2>
-    <a href="{{ release_note.url }}">
-      {{ release_note.title }} - {{ release_note.version }}
-    </a>
-  </h2>
-  <p>{{ release_note.content | markdownify }}</p>
-  {% endif %}
+{% for category in site.categories %}
+  {% if category == 'releases' %}
+      {% for post in category[1] %}
+
+    <div class="col-6">
+      <div class="card text-center">
+         <div class="card-body">
+            <h5 class="card-title">
+                  {{ post.title }}
+            </h5>
+            <p class="card-text">{{ post.excerpt }}</p>
+            <a href="{{ post.url }}" class="btn btn-primary">Read More</a>
+        </div>
+          <div class="card-footer text-body-secondary">{{ post.date | date_to_string: "ordinal", "US"  }}</div>
+      </div>
+   </div>
+  {% endfor %}
+   {% endif %}
 {% endfor %}
-
-
-
